WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
207434
Extent of a composited animation should not include the untransformed position
https://bugs.webkit.org/show_bug.cgi?id=207434
Summary
Extent of a composited animation should not include the untransformed position
Simon Fraser (smfr)
Reported
2020-02-08 14:06:36 PST
Extent of a composited animation should not include the untransformed position
Attachments
Patch
(35.51 KB, patch)
2020-02-08 14:16 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-02-08 14:16:56 PST
Created
attachment 390183
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2020-02-08 14:17:15 PST
<
rdar://problem/59288998
>
WebKit Commit Bot
Comment 3
2020-02-08 17:11:41 PST
Comment on
attachment 390183
[details]
Patch Clearing flags on attachment: 390183 Committed
r256095
: <
https://trac.webkit.org/changeset/256095
>
WebKit Commit Bot
Comment 4
2020-02-08 17:11:42 PST
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 5
2021-05-27 11:49:36 PDT
This caused
bug 218371
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug